...
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_header_reply" />

    <Button
            android:id="@+id/button_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_button_text"
            android:onClick="launchSecondActivity"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
...
